--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,7 +3,7 @@
 
 // Variables
 @import 'variables';
-@import 'izitoast';
+// @import 'izitoast';
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
